# algorithmengineering

Answers/: main.cpp
Answers/Vorlesung1/: CMakeLists.txt  main.cpp
